all cubes spinning
rather than creating the elements programmatically i created 20
<a-animation> elements and targetted them programmatically

--- a/app/index.html
+++ b/app/index.html
@@ -27,13 +27,27 @@
 
 			<a-entity id="oneBox" light="type: point; intensity: 2"></a-entity>
 
-			<a-animation
-				id="rotator"
-				attribute="rotation"
-				dur="10000"
-				easing="linear"
-				repeat="indefinite"
-			></a-animation>
+			<a-animation id="rotator-0"></a-animation>
+			<a-animation id="rotator-1"></a-animation>
+			<a-animation id="rotator-2"></a-animation>
+			<a-animation id="rotator-3"></a-animation>
+			<a-animation id="rotator-4"></a-animation>
+			<a-animation id="rotator-5"></a-animation>
+			<a-animation id="rotator-6"></a-animation>
+			<a-animation id="rotator-7"></a-animation>
+			<a-animation id="rotator-8"></a-animation>
+			<a-animation id="rotator-9"></a-animation>
+			<a-animation id="rotator-10"></a-animation>
+			<a-animation id="rotator-11"></a-animation>
+			<a-animation id="rotator-12"></a-animation>
+			<a-animation id="rotator-13"></a-animation>
+			<a-animation id="rotator-14"></a-animation>
+			<a-animation id="rotator-15"></a-animation>
+			<a-animation id="rotator-16"></a-animation>
+			<a-animation id="rotator-17"></a-animation>
+			<a-animation id="rotator-18"></a-animation>
+			<a-animation id="rotator-19"></a-animation>
+			<!-- <a-animation id="rotator-20"></a-animation> -->
 
 			<a-entity
 				id="ocean"
