--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Entity-Component - Registry" />
+		<meta name="description" content="They're Pink! Look at em fidget about their orbits" />
 		<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 		<script src="https://unpkg.com/aframe-animation-component@3.2.1/dist/aframe-animation-component.min.js"></script>
 		<script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
