broke out css and js for glitch

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 		<!-- <script src="https://unpkg.com/aframe-extras.tube@%5E3.5.x/dist/aframe-extras.tube.min.js"></script> -->
 		<title>Twilight Pink</title>
 		<!-- build:css styles/main.css -->
-		<!-- <link rel="stylesheet" href="styles/main.css" /> -->
+		<link rel="stylesheet" href="styles/main.css" />
 		<!-- endbuild -->
 	</head>
 	<body>
