--- a/app/index.html
+++ b/app/index.html
@@ -4,16 +4,11 @@
 		<meta charset="utf-8" />
 		<meta
 			name="description"
-			content="They're Pink! Look at em fidget about their orbits"
+			content="Asteroid Belt. Both anchored cubes orbitted by stalking twirlers."
 		/>
-		<!-- <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script> -->
 		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 		<!-- <script src="https://unpkg.com/aframe-animation-component@3.2.1/dist/aframe-animation-component.min.js"></script> -->
 		<!-- <script src="https://cdn.jsdelivr.net/npm/aframe-animation-component@5.1.2/dist/aframe-animation-component.min.js"></script> -->
-		<!-- <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script> -->
-		<!-- <script src="https://unpkg.com/aframe-extras.ocean@%5E3.5.x/dist/aframe-extras.ocean.min.js"></script> -->
-		<!-- <script src="https://unpkg.com/aframe-gradient-sky@1.0.4/dist/gradientsky.min.js"></script> -->
-		<!-- <script src="https://unpkg.com/aframe-extras.tube@%5E3.5.x/dist/aframe-extras.tube.min.js"></script> -->
 		<title>Asteroid Belt</title>
 		<!-- build:css styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css" />
@@ -23,24 +18,6 @@
 		<script src="scripts/main.js"></script>
 
 		<a-scene twilight-pink>
-			
-			<!-- <a-entity id="rig" position="0 1.6 0">
-				<a-entity id="camera" camera look-controls></a-entity>
-			</a-entity> -->
-
-			<!-- <a-entity
-				id="ocean"
-				ocean="density: 20; width: 50; depth: 50; speed: 4"
-				material="color: #9CE3F9; opacity: 0.75; metalness: 1; roughness: 1;"
-				rotation="-90 0 0"
-				light="type: ambient; intensity: 0.2; color: #f00"
-			></a-entity> -->
-
-			<!-- <a-entity
-				id="sky"
-				geometry="primitive: sphere; radius: 5000"
-				scale="-1 1 1"
-			></a-entity> -->
 
 			<a-entity 
 				id="light"
@@ -52,10 +29,6 @@
 				light="type: point; intensity: 2"
 			></a-entity>
 
-			<!-- <a-entity
-				id="rain"
-				particle-system="preset: dust; color: #24CAFF,#000000; particleCount: 5000; maxAge: 1; velocityValue: 0 0 0; rotationAngle: 180; accelerationSpread: 50 50 50;"
-			></a-entity> -->
 		</a-scene>
 	</body>
 </html>
