--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 		<!-- endbuild -->
 	</head>
 	<body>
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+		<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
 		<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 		<script src="scripts/p5.sound.js"></script>
 		<script src="scripts/audio-reactor.js"></script>
