colors changing on 2 cues
have colors changing. to tomato once the bassline kicks in, but the
first cue switches very early

also needing lots of optimization

--- a/app/index.html
+++ b/app/index.html
@@ -26,5 +26,7 @@
 
 			<a-entity light="type: point; intensity: 2"></a-entity>
 		</a-scene>
+
+		<!-- <a-scene stats></a-scene> -->
 	</body>
 </html>
