cue points set + glitch button + play button
i set the cue points through the track. one left that i might not do +
added glitch remix button + changed out play button + cleanup

--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,15 @@
 		<script src="scripts/audio-reactor.js"></script>
 		<script src="scripts/main.js"></script>
 
+		<a class="glitchRemix" href="https://glitch.com/edit/#!/remix/pink-cubin"
+			><img
+				src="https://cdn.glitch.com/2703baf2-b643-4da7-ab91-7ee2a2d00b5b%2Fremix-button.svg"
+				alt="Remix on Glitch"
+		/></a>
+
 		<a-scene twilight-pink>
 			<a-entity oculus-touch-controls="hand: right"></a-entity>
-
 			<a-entity light="type: ambient; color: #5667D5"> </a-entity>
-
 			<a-entity light="type: point; intensity: 2"></a-entity>
 		</a-scene>
 
