--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 			content="Asteroid Belt. Both anchored cubes orbitted by stalking twirlers."
 		/>
 		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-		<title>Asteroid Belt</title>
+		<title>Twilight Pink</title>
 		<!-- build:css styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css" />
 		<!-- endbuild -->
