color sequencing for cues
rearranged the order of the color changes

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 			content="Asteroid Belt. Both anchored cubes orbitted by stalking twirlers."
 		/>
 		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-		<title>Twilight Pink</title>
+		<title>Dominas</title>
 		<!-- build:css styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css" />
 		<!-- endbuild -->
@@ -31,6 +31,8 @@
 			<a-entity light="type: point; intensity: 2"></a-entity>
 		</a-scene>
 
+		<!-- Stats -->
+		<!--  -->
 		<!-- <a-scene stats></a-scene> -->
 	</body>
 </html>
