created sense of depth via fog
had to place fog on the scene via html. want to figure out how to do the
same using just js

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 				alt="Remix on Glitch"
 		/></a>
 
-		<a-scene twilight-pink>
+		<a-scene twilight-pink fog="type: linear; far: 70; near: 0">
 			<a-entity oculus-touch-controls="hand: right"></a-entity>
 			<a-entity light="type: ambient; color: #5667D5"> </a-entity>
 			<a-entity light="type: point; intensity: 2"></a-entity>
