changed scene name: sky-walking
twilight-pink -> sky-walking

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 			content="Asteroid Belt. Both anchored cubes orbitted by stalking twirlers."
 		/>
 		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-		<title>Dominas</title>
+		<title>Sky Walking</title>
 		<!-- build:css styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css" />
 		<!-- endbuild -->
@@ -25,7 +25,7 @@
 				alt="Remix on Glitch"
 		/></a>
 
-		<a-scene twilight-pink fog="type: linear; far: 70; near: 0">
+		<a-scene sky-walking fog="type: linear; far: 70; near: 0">
 			<a-entity oculus-touch-controls="hand: right"></a-entity>
 			<a-entity light="type: ambient; color: #5667D5"> </a-entity>
 			<a-entity light="type: point; intensity: 2"></a-entity>
