--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 				alt="Remix on Glitch"
 		/></a>
 
-		<a-scene sky-walking fog="type: linear; far: 70; near: 0">
+		<a-scene sky-walking fog="type: linear; far: 70; near: 0"  wasd-controls="acceleration: 800; fly: true">
 			<a-entity oculus-touch-controls="hand: right"></a-entity>
 			<a-entity light="type: ambient; color: #5667D5"> </a-entity>
 			<a-entity light="type: point; intensity: 2"></a-entity>
