loading screen updates
adjusted to account for mobile browsers calculation of 100vh + added cta
+ edited copy

--- a/app/index.html
+++ b/app/index.html
@@ -14,17 +14,19 @@
 	</head>
 	<body>
 		<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
-		<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 		<script src="scripts/p5.sound.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script> -->
 		<script src="scripts/audio-reactor.js"></script>
 		<script src="scripts/main.js"></script>
 
 		<div id="loadingMsg">
 			<h1>Sky Walking</h1>
-			<h2>(working title)</h2>
 			<p>This is a WebXR app made using A-Frame and p5.js</p>
-			<p>Pan/look around in all directions.</p>
-			<p>Hit the "Play" button below to get the audio and audio reactivity going. <br>Hit the "VR" button to enter in a headset.</p>
+			<p>Pan/Look around in all directions.</p>
+			<p>Hit the "Play" button on the next screen to get the audio and audio reactivity going.</p>
+			<p>Hit the "VR" button to enter in a headset.</p>
+			<button class="transp-bg">enter</button>
 		</div>
 
 		<a class="glitchRemix" href="https://glitch.com/edit/#!/remix/sky-walking"
