loading screen edits

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 			<h1>Sky Walking</h1>
 			<p>This is a WebXR app made using A-Frame and p5.js</p>
 			<p>Pan/Look around in all directions.</p>
-			<p>Hit the "Play" button on the next screen to get the audio and audio reactivity going.</p>
+			<p>The "Play" button on the next screen gets audio reactivity going. On iOS you'll need to <span>turn off silent mode</span>.</p>
 			<p>Hit the "VR" button to enter in a headset.</p>
 			<button class="transp-bg">enter</button>
 		</div>
