figuring out scene reloading ... not quite there

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,10 @@
 				<button class="transp-bg loading"><span class="blinkDot">loading</span></button>
 				<button class="transp-bg enter">enter</button>
 			</div>
+			<div class="reloaded">
+				<button class="transp-bg loading"><span class="blinkDot">loading</span></button>
+				<button class="transp-bg enter">enter</button>
+			</div>
 		</div>
 
 		<a class="glitchRemix" href="https://glitch.com/edit/#!/remix/sky-walking"
