edited html meta image

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8" />
 		<meta
 			name="description"
-			content="Asteroid Belt. Both anchored cubes orbitted by stalking twirlers."
+			content='"Remind Me" a Music Visualization'
 		/>
+		<meta property="og:image" content="//neoneon.one/sky-walking/images/skyWalkingScreenshot.png" />
 		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 		<title>Sky Walking</title>
 		<!-- build:css styles/main.css -->
